--- a/sponsers.css
+++ b/sponsers.css
@@ -20,7 +20,7 @@
     /* margin-right: auto; */
     justify-content: center;
     /* align-items: center; */
-    gap: 20px;
+    gap: 50px;
     color: white;
     background-color: black;
     padding: auto;
@@ -30,10 +30,23 @@
 
 
 
+/* min-width: 100px; */
 .logo{
-    border: 2px solid red;
-    height: 80px;
-    width: 200px;
+    /* border: 2px solid red; */
+    height: auto;
+    width: 290px;
+    font-size: small;
+}
+
+.images{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20%;
+    padding: 4px;
+}
+.images img{
+    width: 50px;
 }
 
 /* .mail{
